refs #177 - FROM predicate introduced